{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 3243,
  "lineage": "0ec67b2e-8f10-fa6b-c1e1-fa12c14283e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_to_node_metrics_10251",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS control plane to reach metrics-server on 10251",
            "from_port": 10251,
            "id": "sgrule-793936926",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-063b53cc526394d21",
            "security_group_rule_id": "sgr-08a63f0488addb7e5",
            "self": false,
            "source_security_group_id": "sg-04e8ff30f3e4a1f6c",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_cloudwatch_log_group.this",
            "module.eks_mod.aws_eks_cluster.this",
            "module.eks_mod.aws_iam_policy.cni_ipv6_policy",
            "module.eks_mod.aws_iam_role.eks_auto",
            "module.eks_mod.aws_iam_role.this",
            "module.eks_mod.aws_iam_role_policy_attachment.this",
            "module.eks_mod.aws_security_group.cluster",
            "module.eks_mod.aws_security_group.node",
            "module.eks_mod.aws_security_group_rule.cluster",
            "module.eks_mod.aws_security_group_rule.node",
            "module.eks_mod.data.aws_caller_identity.current",
            "module.eks_mod.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_mod.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_mod.data.aws_iam_policy_document.node_assume_role_policy",
            "module.eks_mod.data.aws_iam_session_context.current",
            "module.eks_mod.data.aws_partition.current",
            "module.eks_mod.module.kms.aws_kms_external_key.this",
            "module.eks_mod.module.kms.aws_kms_key.this",
            "module.eks_mod.module.kms.aws_kms_replica_external_key.this",
            "module.eks_mod.module.kms.aws_kms_replica_key.this",
            "module.eks_mod.module.kms.data.aws_caller_identity.current",
            "module.eks_mod.module.kms.data.aws_iam_policy_document.this",
            "module.eks_mod.module.kms.data.aws_partition.current",
            "module.vpc_mod.aws_subnet.private",
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_to_node_metrics_10250",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node-to-node metrics scraping on 10250",
            "from_port": 10250,
            "id": "sgrule-617397794",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-063b53cc526394d21",
            "security_group_rule_id": "sgr-0b8645823945511e2",
            "self": false,
            "source_security_group_id": "sg-063b53cc526394d21",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_security_group.node",
            "module.vpc_mod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_mod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:security-group/sg-0748c3fc33557750d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0748c3fc33557750d",
            "ingress": [],
            "name": "eks-mod-cluster-20260311231014938100000004",
            "name_prefix": "eks-mod-cluster-",
            "owner_id": "739961805636",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-mod-cluster",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "eks-mod-cluster",
              "project": "eks-mod"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bab6eb1971d3107"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_mod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:security-group/sg-063b53cc526394d21",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-063b53cc526394d21",
            "ingress": [],
            "name": "eks-mod-node-20260311144054652900000009",
            "name_prefix": "eks-mod-node-",
            "owner_id": "739961805636",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-mod-node",
              "karpenter.sh/discovery": "eks-mod",
              "kubernetes.io/cluster/eks-mod": "owned",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "eks-mod-node",
              "karpenter.sh/discovery": "eks-mod",
              "kubernetes.io/cluster/eks-mod": "owned",
              "project": "eks-mod"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bab6eb1971d3107"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_mod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3212769674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0748c3fc33557750d",
            "security_group_rule_id": "sgr-0e9dbb67a40c57cfa",
            "self": false,
            "source_security_group_id": "sg-063b53cc526394d21",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_security_group.cluster",
            "module.eks_mod.aws_security_group.node",
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_mod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3540618660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-063b53cc526394d21",
            "security_group_rule_id": "sgr-00bd91c0023816100",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_security_group.cluster",
            "module.eks_mod.aws_security_group.node",
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-322974906",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b53cc526394d21",
            "security_group_rule_id": "sgr-028b2e4ca23f39a35",
            "self": false,
            "source_security_group_id": "sg-0748c3fc33557750d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_security_group.cluster",
            "module.eks_mod.aws_security_group.node",
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3575686667",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b53cc526394d21",
            "security_group_rule_id": "sgr-027543f677e25f055",
            "self": false,
            "source_security_group_id": "sg-0748c3fc33557750d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_security_group.cluster",
            "module.eks_mod.aws_security_group.node",
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-476234141",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b53cc526394d21",
            "security_group_rule_id": "sgr-0c4ebf15dbfc61330",
            "self": false,
            "source_security_group_id": "sg-0748c3fc33557750d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_security_group.cluster",
            "module.eks_mod.aws_security_group.node",
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-255786428",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b53cc526394d21",
            "security_group_rule_id": "sgr-064997061f3c39b8e",
            "self": false,
            "source_security_group_id": "sg-0748c3fc33557750d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_security_group.cluster",
            "module.eks_mod.aws_security_group.node",
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1805635191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b53cc526394d21",
            "security_group_rule_id": "sgr-0ea6d5733385ed331",
            "self": false,
            "source_security_group_id": "sg-0748c3fc33557750d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_security_group.cluster",
            "module.eks_mod.aws_security_group.node",
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2375670388",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b53cc526394d21",
            "security_group_rule_id": "sgr-0648c340769ba20c5",
            "self": false,
            "source_security_group_id": "sg-0748c3fc33557750d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_security_group.cluster",
            "module.eks_mod.aws_security_group.node",
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-90472801",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b53cc526394d21",
            "security_group_rule_id": "sgr-06dbdb2569a9ff5ea",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_security_group.cluster",
            "module.eks_mod.aws_security_group.node",
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1859918195",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-063b53cc526394d21",
            "security_group_rule_id": "sgr-00aa931194e76e203",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_security_group.cluster",
            "module.eks_mod.aws_security_group.node",
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3397630620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-063b53cc526394d21",
            "security_group_rule_id": "sgr-093d77a63227bbf69",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_mod.aws_security_group.cluster",
            "module.eks_mod.aws_security_group.node",
            "module.vpc_mod.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:network-acl/acl-0e0d396da1081c477",
            "default_network_acl_id": "acl-0e0d396da1081c477",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e0d396da1081c477",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "739961805636",
            "subnet_ids": [
              "subnet-01e0aa85fac2271d6",
              "subnet-06d5642c34c6285be",
              "subnet-0e74723c98004bb15",
              "subnet-0f1b08fc9772b9d66"
            ],
            "tags": {
              "Name": "terraform-01-mod-default",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod-default",
              "project": "eks-mod"
            },
            "vpc_id": "vpc-03bab6eb1971d3107"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:route-table/rtb-0b068d0555a366cfb",
            "default_route_table_id": "rtb-0b068d0555a366cfb",
            "id": "rtb-0b068d0555a366cfb",
            "owner_id": "739961805636",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "terraform-01-mod-default",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod-default",
              "project": "eks-mod"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03bab6eb1971d3107"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:security-group/sg-0d014aa2a52685ecd",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d014aa2a52685ecd",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "739961805636",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-01-mod-default",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod-default",
              "project": "eks-mod"
            },
            "vpc_id": "vpc-03bab6eb1971d3107"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ced36e2a1667bfca",
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:elastic-ip/eipalloc-0ced36e2a1667bfca",
            "domain": "vpc",
            "id": "eipalloc-0ced36e2a1667bfca",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-165-20-144.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.20.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-01-mod-ap-northeast-2a",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod-ap-northeast-2a",
              "project": "eks-mod"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_internet_gateway.this",
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:internet-gateway/igw-081744a038f2a386a",
            "id": "igw-081744a038f2a386a",
            "owner_id": "739961805636",
            "tags": {
              "Name": "terraform-01-mod",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod",
              "project": "eks-mod"
            },
            "vpc_id": "vpc-03bab6eb1971d3107"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ced36e2a1667bfca",
            "association_id": "eipassoc-00a0e9dfdfd04e059",
            "connectivity_type": "public",
            "id": "nat-0ad2e92599ba22e9d",
            "network_interface_id": "eni-0f168b3fd49f32932",
            "private_ip": "10.10.1.120",
            "public_ip": "15.165.20.144",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e74723c98004bb15",
            "tags": {
              "Name": "terraform-01-mod-ap-northeast-2a",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod-ap-northeast-2a",
              "project": "eks-mod"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_eip.nat",
            "module.vpc_mod.aws_internet_gateway.this",
            "module.vpc_mod.aws_subnet.public",
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d716d7dd65003e741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ad2e92599ba22e9d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d716d7dd65003e74",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_eip.nat",
            "module.vpc_mod.aws_internet_gateway.this",
            "module.vpc_mod.aws_nat_gateway.this",
            "module.vpc_mod.aws_route_table.private",
            "module.vpc_mod.aws_subnet.public",
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-081744a038f2a386a",
            "id": "r-rtb-03ebba12706027eae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ebba12706027eae",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_internet_gateway.this",
            "module.vpc_mod.aws_route_table.public",
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:route-table/rtb-0d716d7dd65003e74",
            "id": "rtb-0d716d7dd65003e74",
            "owner_id": "739961805636",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-01-mod-private",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod-private",
              "project": "eks-mod"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bab6eb1971d3107"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:route-table/rtb-03ebba12706027eae",
            "id": "rtb-03ebba12706027eae",
            "owner_id": "739961805636",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-01-mod-public",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod-public",
              "project": "eks-mod"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bab6eb1971d3107"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aafa4d924eb578f1",
            "route_table_id": "rtb-0d716d7dd65003e74",
            "subnet_id": "subnet-01e0aa85fac2271d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_route_table.private",
            "module.vpc_mod.aws_subnet.private",
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097a525136f4d0375",
            "route_table_id": "rtb-0d716d7dd65003e74",
            "subnet_id": "subnet-0f1b08fc9772b9d66"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_route_table.private",
            "module.vpc_mod.aws_subnet.private",
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1293a3178d739b4",
            "route_table_id": "rtb-03ebba12706027eae",
            "subnet_id": "subnet-0e74723c98004bb15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_route_table.public",
            "module.vpc_mod.aws_subnet.public",
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd156f25b5bb20f7",
            "route_table_id": "rtb-03ebba12706027eae",
            "subnet_id": "subnet-06d5642c34c6285be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_route_table.public",
            "module.vpc_mod.aws_subnet.public",
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:subnet/subnet-01e0aa85fac2271d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e0aa85fac2271d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739961805636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-01-mod-private-ap-northeast-2a",
              "karpenter.sh/discovery": "eks-mod",
              "kubernetes.io/cluster/eks-mod": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod-private-ap-northeast-2a",
              "karpenter.sh/discovery": "eks-mod",
              "kubernetes.io/cluster/eks-mod": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "eks-mod"
            },
            "vpc_id": "vpc-03bab6eb1971d3107"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:subnet/subnet-0f1b08fc9772b9d66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1b08fc9772b9d66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739961805636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-01-mod-private-ap-northeast-2c",
              "karpenter.sh/discovery": "eks-mod",
              "kubernetes.io/cluster/eks-mod": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod-private-ap-northeast-2c",
              "karpenter.sh/discovery": "eks-mod",
              "kubernetes.io/cluster/eks-mod": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "eks-mod"
            },
            "vpc_id": "vpc-03bab6eb1971d3107"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:subnet/subnet-0e74723c98004bb15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e74723c98004bb15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739961805636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-01-mod-public-ap-northeast-2a",
              "kubernetes.io/cluster/eks-mod": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod-public-ap-northeast-2a",
              "kubernetes.io/cluster/eks-mod": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "eks-mod"
            },
            "vpc_id": "vpc-03bab6eb1971d3107"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:subnet/subnet-06d5642c34c6285be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d5642c34c6285be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739961805636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-01-mod-public-ap-northeast-2c",
              "kubernetes.io/cluster/eks-mod": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod-public-ap-northeast-2c",
              "kubernetes.io/cluster/eks-mod": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "eks-mod"
            },
            "vpc_id": "vpc-03bab6eb1971d3107"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_mod.aws_vpc.this",
            "module.vpc_mod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:739961805636:vpc/vpc-03bab6eb1971d3107",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0e0d396da1081c477",
            "default_route_table_id": "rtb-0b068d0555a366cfb",
            "default_security_group_id": "sg-0d014aa2a52685ecd",
            "dhcp_options_id": "dopt-028d1a46ec037e7ec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03bab6eb1971d3107",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b068d0555a366cfb",
            "owner_id": "739961805636",
            "tags": {
              "Name": "terraform-01-mod",
              "project": "eks-mod"
            },
            "tags_all": {
              "Name": "terraform-01-mod",
              "project": "eks-mod"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}